@@ -14,44 +14,32 @@ class CondorCREAMBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
     This class is expected to have separate instances for each PandaQueue object. 
     '''
    
-    def __init__(self, apfqueue):
-
-        super(CondorCREAMBatchSubmitPlugin, self).__init__(apfqueue) 
-        self.log.info('CondorCREAMBatchSubmitPlugin: Object initialized.')
-
-    def _readconfig(self, qcl=None):
-        ''' 
-        read the config loader object
-        ''' 
-
-        # Chosing the queue config object, depending on 
-        if not qcl:
-            qcl = self.apfqueue.factory.qcl
-
-        # we rename the queue config variables to pass a new config object to parent class
+    def __init__(self, apfqueue, config=None):
+        if not config:
+            qcl = apfqueue.factory.qcl            
+        else:
+            qcl = config
         newqcl = qcl.clone().filterkeys('batchsubmit.condorcream', 'batchsubmit.condorce')
-        valid = super(CondorCREAMBatchSubmitPlugin, self)._readconfig(newqcl) 
-        if not valid:
-            return False
+        super(CondorCREAMBatchSubmitPlugin, self).__init__(apfqueue, config=newqcl) 
         try:
             self.gridresource = qcl.generic_get(self.apfqname, 'batchsubmit.condorcream.gridresource') 
             self.webservice = qcl.generic_get(self.apfqname, 'batchsubmit.condorcream.webservice')
             self.creamport = qcl.generic_get(self.apfqname, 'batchsubmit.condorcream.port', 'getint')
             self.creambatch = qcl.generic_get(self.apfqname, 'batchsubmit.condorcream.batch')
             self.queue = qcl.generic_get(self.apfqname, 'batchsubmit.condorcream.queue')
+        
+        except Exception, e:
+            self.log.error("Caught exception: %s " % str(e))
+            raise
+        
+        self.log.info('CondorCREAMBatchSubmitPlugin: Object initialized.')
 
-            return True
-        except:
-            return False
-            
-
+          
     def _addJSD(self):
         '''
         add things to the JSD object
         '''
-    
         self.log.debug('CondorCREAMBatchSubmitPlugin.addJSD: Starting.')
-   
         # if variable webservice, for example, has a value, 
         # then we can assume the grid resource line is meant to be built from pieces.
         # Otherwise, we will assume its entire value comes from gridresource variable. 
@@ -60,6 +48,5 @@ class CondorCREAMBatchSubmitPlugin(CondorCEBatchSubmitPlugin):
         else:
                 self.JSD.add('grid_resource', 'cream %s' %self.gridresource)
         super(CondorCREAMBatchSubmitPlugin, self)._addJSD() 
-    
         self.log.debug('CondorCREAMBatchSubmitPlugin.addJSD: Leaving.')
 
